--- a/.github/workflows/test_sequence.yml
+++ b/.github/workflows/test_sequence.yml
@@ -86,3 +86,35 @@ jobs:
           source /setup_envs.sh && cd lorenzetti && source setup.sh
           cd tests
           source test_reco_trf.sh
+
+
+
+#
+# Event generation tests
+# 
+
+  gen_zee:
+    runs-on: self-hosted
+    needs: build
+    container:
+      image: docker://lorenzetti/lorenzetti:latest
+    steps:
+      - name: Event Zee Generation
+        shell: bash
+        run: |
+          source /setup_envs.sh && cd lorenzetti && source setup.sh
+          cd tests
+          source test_gen_zee.sh
+
+  gen_jets:
+    runs-on: self-hosted
+    needs: build
+    container:
+      image: docker://lorenzetti/lorenzetti:latest
+    steps:
+      - name: Event Jets Generation
+        shell: bash
+        run: |
+          source /setup_envs.sh && cd lorenzetti && source setup.sh
+          cd tests
+          source test_gen_jets.sh
